// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NoticeBar > NoticeBar baseVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info"
>
  <!---->
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      这是一条普通的通知信息
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`NoticeBar > NoticeBar customVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info cover-class"
>
  <div
    class="t-notice-bar__prefix-icon"
  >
    
    <svg
      class="t-icon t-icon-sound"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="sound"
      >
        <path
          d="M14.0002 21L5.99902 16.5V7.5L14.0002 3V21Z"
          fill="transparent"
          id="fill1"
        />
        <path
          d="M2 16.5L2 7.5H5.99882L5.99882 16.5L2 16.5Z"
          fill="transparent"
          id="fill2"
        />
        <path
          d="M5.99882 16.5L2 16.5L2 7.5H5.99882M5.99882 16.5L14 21V3L5.99882 7.5M5.99882 16.5L5.99882 7.5"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
        <path
          d="M17.9902 13.5059C18.3184 13.0719 18.4961 12.5428 18.4963 11.9987C18.4965 11.4546 18.3192 10.9254 17.9913 10.4912M20.7813 15.618C21.5689 14.5765 21.9953 13.3066 21.9957 12.0008C21.9962 10.6951 21.5707 9.42481 20.7838 8.38281"
          id="stroke2"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
    
  </div>
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      提示文字描述提示文字描述提示文字描述
      <!---->
    </div>
  </div>
  <div
    class="t-notice-bar__suffix-icon"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="chevron-right"
      >
        <path
          d="M9.5 17.5L15 12L9.5 6.5"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
    
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar customizationVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info"
>
  <div
    class="t-notice-bar__prefix-icon"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述
      <span
        class="t-notice-bar__operation"
      >
        
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium"
          style="margin-left: 2px;"
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
            详情
            
          </span>
          <!---->
        </a>
        
      </span>
    </div>
  </div>
  <div
    class="t-notice-bar__suffix-icon"
  >
    
    <svg
      class="t-icon t-icon-close"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="close"
      >
        <path
          d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
    
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar eventVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
  >
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        这是一条普通的消息通知
        <span
          class="t-notice-bar__operation"
        >
          
          <a
            aria-disabled="false"
            class="t-link t-link--primary t-link--medium"
            style="margin-left: 5px;"
            target=""
          >
            <!---->
            <span
              class="t-link__content"
            >
              
              详情
              
            </span>
            <!---->
          </a>
          
        </span>
      </div>
    </div>
    <div
      class="t-notice-bar__suffix-icon"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="chevron-right"
        >
          <path
            d="M9.5 17.5L15 12L9.5 6.5"
            id="stroke1"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
        </g>
      </svg>
    </div>
  </div>
  <div
    class="t-notice-bar t-notice-bar--info"
  >
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        这是一条普通的通知信息
        <!---->
      </div>
    </div>
    <div
      class="t-notice-bar__suffix-icon"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="chevron-right"
        >
          <path
            d="M9.5 17.5L15 12L9.5 6.5"
            id="stroke1"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
        </g>
      </svg>
    </div>
  </div>
  
</div>
`;

exports[`NoticeBar > NoticeBar iconDemoVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info"
>
  <div
    class="t-notice-bar__prefix-icon"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      提示文字描述提示文字描述提示文字描述
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`NoticeBar > NoticeBar mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    NoticeBar 公告栏
  </h1>
  <p
    class="summary"
  >
    在导航栏下方，用于给用户显示提示消息。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        纯文字的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <!---->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            这是一条普通的通知信息
            <!---->
          </div>
        </div>
        <!---->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带图标的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述
            <!---->
          </div>
        </div>
        <!---->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带关闭的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            这是一条普通的通知信息
            <!---->
          </div>
        </div>
        <div
          class="t-notice-bar__suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="close"
            >
              <path
                d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带入口的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            这是一条普通的消息通知
            <span
              class="t-notice-bar__operation"
            >
              
              <a
                aria-disabled="false"
                class="t-link t-link--primary t-link--medium"
                style="margin-left: 5px;"
                target=""
              >
                <!---->
                <span
                  class="t-link__content"
                >
                  
                  详情
                  
                </span>
                <!---->
              </a>
              
            </span>
          </div>
        </div>
        <div
          class="t-notice-bar__suffix-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="chevron-right"
            >
              <path
                d="M9.5 17.5L15 12L9.5 6.5"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            这是一条普通的通知信息
            <!---->
          </div>
        </div>
        <div
          class="t-notice-bar__suffix-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="chevron-right"
            >
              <path
                d="M9.5 17.5L15 12L9.5 6.5"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定样式的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info cover-class"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          
          <svg
            class="t-icon t-icon-sound"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="sound"
            >
              <path
                d="M14.0002 21L5.99902 16.5V7.5L14.0002 3V21Z"
                fill="transparent"
                id="fill1"
              />
              <path
                d="M2 16.5L2 7.5H5.99882L5.99882 16.5L2 16.5Z"
                fill="transparent"
                id="fill2"
              />
              <path
                d="M5.99882 16.5L2 16.5L2 7.5H5.99882M5.99882 16.5L14 21V3L5.99882 7.5M5.99882 16.5L5.99882 7.5"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
              <path
                d="M17.9902 13.5059C18.3184 13.0719 18.4961 12.5428 18.4963 11.9987C18.4965 11.4546 18.3192 10.9254 17.9913 10.4912M20.7813 15.618C21.5689 14.5765 21.9953 13.3066 21.9957 12.0008C21.9962 10.6951 21.5707 9.42481 20.7838 8.38281"
                id="stroke2"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
          
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述
            <!---->
          </div>
        </div>
        <div
          class="t-notice-bar__suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="chevron-right"
            >
              <path
                d="M9.5 17.5L15 12L9.5 6.5"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定义内容的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述
            <span
              class="t-notice-bar__operation"
            >
              
              <a
                aria-disabled="false"
                class="t-link t-link--primary t-link--medium"
                style="margin-left: 2px;"
                target=""
              >
                <!---->
                <span
                  class="t-link__content"
                >
                  
                  详情
                  
                </span>
                <!---->
              </a>
              
            </span>
          </div>
        </div>
        <div
          class="t-notice-bar__suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="close"
            >
              <path
                d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        公告栏类型有普通（info）、警示（warning）、成功（success）、错误（error）
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            默认状态公告栏默认状态公告栏
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-notice-bar t-notice-bar--success notice-bar-demo-block"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-check-circle-filled"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            成功状态公告栏成功状态公告栏
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-notice-bar t-notice-bar--warning notice-bar-demo-block"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-error-circle-filled"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            警示状态公告栏警示状态公告栏
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-notice-bar t-notice-bar--error"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-error-circle-filled"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            错误状态公告栏错误状态公告栏
            <!---->
          </div>
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 可滚动的公告栏
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        可滚动公告栏有水平 (horizontal) 和垂直 (vertical)
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
      >
        <!---->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述提示文字描述文
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述提示文字描述文
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <div
          class="t-notice-bar__prefix-icon"
        >
          
          <svg
            class="t-icon t-icon-sound"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="sound"
            >
              <path
                d="M14.0002 21L5.99902 16.5V7.5L14.0002 3V21Z"
                fill="transparent"
                id="fill1"
              />
              <path
                d="M2 16.5L2 7.5H5.99882L5.99882 16.5L2 16.5Z"
                fill="transparent"
                id="fill2"
              />
              <path
                d="M5.99882 16.5L2 16.5L2 7.5H5.99882M5.99882 16.5L14 21V3L5.99882 7.5M5.99882 16.5L5.99882 7.5"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
              <path
                d="M17.9902 13.5059C18.3184 13.0719 18.4961 12.5428 18.4963 11.9987C18.4965 11.4546 18.3192 10.9254 17.9913 10.4912M20.7813 15.618C21.5689 14.5765 21.9953 13.3066 21.9957 12.0008C21.9962 10.6951 21.5707 9.42481 20.7838 8.38281"
                id="stroke2"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
          
        </div>
        <div
          class="t-notice-bar__content-wrap"
        >
          <div>
            <div
              class="t-swiper t-swiper--default t-notice-bar__content--vertical"
            >
              <div
                class="t-swiper__container"
                style="flex-direction: column; transition: none; height: auto;"
              >
                
                
                <div
                  class="t-swiper-item"
                  style=""
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    君不见
                  </div>
                  
                </div>
                <div
                  class="t-swiper-item"
                  style=""
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    高堂明镜悲白发
                  </div>
                  
                </div>
                <div
                  class="t-swiper-item"
                  style=""
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    朝如青丝暮成雪
                  </div>
                  
                </div>
                <div
                  class="t-swiper-item"
                  style=""
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    人生得意须尽欢
                  </div>
                  
                </div>
                <div
                  class="t-swiper-item"
                  style=""
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    莫使金樽空对月
                  </div>
                  
                </div>
                
                
              </div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar scrollingVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
  >
    <!---->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        提示文字描述提示文字描述提示文字描述提示文字描述文
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
  >
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        提示文字描述提示文字描述提示文字描述提示文字描述文
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-notice-bar t-notice-bar--info"
  >
    <div
      class="t-notice-bar__prefix-icon"
    >
      
      <svg
        class="t-icon t-icon-sound"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="sound"
        >
          <path
            d="M14.0002 21L5.99902 16.5V7.5L14.0002 3V21Z"
            fill="transparent"
            id="fill1"
          />
          <path
            d="M2 16.5L2 7.5H5.99882L5.99882 16.5L2 16.5Z"
            fill="transparent"
            id="fill2"
          />
          <path
            d="M5.99882 16.5L2 16.5L2 7.5H5.99882M5.99882 16.5L14 21V3L5.99882 7.5M5.99882 16.5L5.99882 7.5"
            id="stroke1"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
          <path
            d="M17.9902 13.5059C18.3184 13.0719 18.4961 12.5428 18.4963 11.9987C18.4965 11.4546 18.3192 10.9254 17.9913 10.4912M20.7813 15.618C21.5689 14.5765 21.9953 13.3066 21.9957 12.0008C21.9962 10.6951 21.5707 9.42481 20.7838 8.38281"
            id="stroke2"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
        </g>
      </svg>
      
    </div>
    <div
      class="t-notice-bar__content-wrap"
    >
      <div>
        <div
          class="t-swiper t-swiper--default t-notice-bar__content--vertical"
        >
          <div
            class="t-swiper__container"
            style="flex-direction: column; transition: none; height: auto;"
          >
            
            
            <div
              class="t-swiper-item"
              style=""
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                君不见
              </div>
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                高堂明镜悲白发
              </div>
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                朝如青丝暮成雪
              </div>
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                人生得意须尽欢
              </div>
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                莫使金樽空对月
              </div>
              
            </div>
            
            
          </div>
          <!---->
        </div>
      </div>
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`NoticeBar > NoticeBar suffixIconVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info"
>
  <div
    class="t-notice-bar__prefix-icon"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      这是一条普通的通知信息
      <!---->
    </div>
  </div>
  <div
    class="t-notice-bar__suffix-icon"
  >
    
    <svg
      class="t-icon t-icon-close"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="close"
      >
        <path
          d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
    
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar themeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
  >
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        默认状态公告栏默认状态公告栏
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-notice-bar t-notice-bar--success notice-bar-demo-block"
  >
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-check-circle-filled"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        成功状态公告栏成功状态公告栏
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-notice-bar t-notice-bar--warning notice-bar-demo-block"
  >
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-error-circle-filled"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        警示状态公告栏警示状态公告栏
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-notice-bar t-notice-bar--error"
  >
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-error-circle-filled"
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        错误状态公告栏错误状态公告栏
        <!---->
      </div>
    </div>
    <!---->
  </div>
  
</div>
`;
